now comments are in service and the mapping is realized in serviceImpl